chore: fixed tableOfContent overlapping and few minor changes

--- a/src/styles/partials/_postPage.scss
+++ b/src/styles/partials/_postPage.scss
@@ -7,10 +7,9 @@ $font-family_1: "firecode", firecode;
 $background-color_1: #180d23;
 
 .container {
-  max-width: 700px;
   margin-top: 4rem !important;
   margin-bottom: 2rem;
-  margin: 0 auto;
+  // margin: 0 auto;
   padding: 40px;
   .post-navigation {
     display: flex;
@@ -31,6 +30,11 @@ $background-color_1: #180d23;
       text-decoration: none;
     }
   }
+}
+
+.blog-content {
+  max-width: 700px !important;
+  margin: auto;
 }
 
 .title {
@@ -59,6 +63,7 @@ $background-color_1: #180d23;
 
 .content {
   color: $color_3;
+
   line-height: 1.6;
   word-wrap: break-word;
   border-radius: 12px;
@@ -199,8 +204,8 @@ $background-color_1: #180d23;
 }
 
 .tableOfContent::-webkit-scrollbar-thumb {
-  background-color: #88888895;
-  border-radius: 6px;
+  background-color: #262626;
+  border-radius: 14px;
 }
 
 .tableOfContent {
@@ -209,7 +214,11 @@ $background-color_1: #180d23;
   width: 20rem;
   top: 120px;
   color: $color_3;
-  max-height: 30rem;
+  max-height: 14rem;
+  border: 1px solid rgba(124, 104, 238, 0.626);
+  background-color: rgba(124, 104, 238, 0.087);
+  padding: 1rem 0 1rem 1rem;
+  border-radius: 5px;
   overflow: auto;
   line-height: 1.6;
   word-wrap: break-word;
@@ -218,21 +227,12 @@ $background-color_1: #180d23;
   ul {
     list-style: none !important;
   }
-  mask-image: linear-gradient(
-    360deg,
-    rgba(255, 255, 255, 0) calc(var(--scale) * -10%),
-    rgba(255, 255, 255, 0.1) calc(var(--scale) * 6%),
-    rgba(255, 255, 255, 0.5) calc(var(--scale) * 22.5%),
-    rgba(255, 255, 255, 0.6) calc(var(--scale) * 25.5%),
-    rgba(255, 255, 255, 0.7) calc(var(--scale) * 30%),
-    rgba(255, 255, 255, 0.8) calc(var(--scale) * 36%),
-    rgba(255, 255, 255, 0.9) calc(var(--scale) * 48%),
-    rgba(255, 255, 255, 1) calc(var(--scale) * 60%)
-  );
 
   @media screen and (max-width: 1400px) {
     position: inherit;
     width: auto;
+    height: auto;
+    max-height: 25rem;
   }
 
   p {
